--- a/Example/Podfile
+++ b/Example/Podfile
@@ -6,8 +6,8 @@ target 'Alert_Example' do
   target 'Alert_Tests' do
     inherit! :search_paths
 
-    pod 'Quick', '~> 0.8'
-  pod 'Nimble', '~> 3.0'
+  pod 'Quick'
+  pod 'Nimble'
   pod 'FBSnapshotTestCase'
   pod 'Nimble-Snapshots'
   end
