--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,28 @@
-# references:
-# * http://www.objc.io/issue-6/travis-ci.html
-# * https://github.com/supermarin/xcpretty#usage
-
-osx_image: xcode8.1
-language: Swift
-# cache: cocoapods
-# podfile: Example/Podfile
-# before_install:
-# - gem install cocoapods # Since Travis is not always on latest version
-# - pod install --project-directory=Example
-script:
-- set -o pipefail && xcodebuild test -workspace Example/Alert.xcworkspace -scheme Alert-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
-- pod lib lint
+ # * http://www.objc.io/issue-6/travis-ci.html
+  # * https://github.com/supermarin/xcpretty#usage      # * https://github.com/supermarin/xcpretty#usage
+        
+ -osx_image: xcode8.1    +osx_image: xcode8
+ -language: Swift    +language: objective-c
+ +
+ +env: 
+ +  matrix:
+ +    - TEST_TYPE=iOS
+  # cache: cocoapods      # cache: cocoapods
+  # podfile: Example/Podfile      # podfile: Example/Podfile
+ -# before_install:    +before_install:
+  # - gem install cocoapods # Since Travis is not always on latest version      # - gem install cocoapods # Since Travis is not always on latest version
+ -# - pod install --project-directory=Example    +  - pod install --project-directory=Example
+ +  - |
+ +      gem install xcpretty -N --no-ri --no-rdoc
+ +
+ +
+  script:     script:
+ -- set -o pipefail && xcodebuild test -workspace Example/Alert.xcworkspace -scheme Alert-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty     +# - set -o pipefail && xcodebuild test -verbose -workspace Example/Alert.xcworkspace -scheme Alert-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
+ -- pod lib lint     +- xcodebuild test -workspace Example/Alert.xcworkspace -scheme Alert-Example -destination 'platform=iOS Simulator,name=iPhone 6 Plus' | xcpretty -c && exit ${PIPESTATUS[0]}
+ +- xcodebuild -version
+ +- xcodebuild -showsdks
+ +
+ +# Run `pod lib lint` if specified
+ +- if [ $POD_LINT == "YES" ]; then
+ +  pod lib lint;
+ +  fi
