--- a/.travis.yml
+++ b/.travis.yml
@@ -9,17 +9,15 @@ env:
   matrix:
     - TEST_TYPE=iOS
 # cache: cocoapods
-# podfile: Example/Podfile
+podfile: Example/Podfile
 before_install:
 # - gem install cocoapods # Since Travis is not always on latest version
 # - pod install --project-directory=Example
-  - |
-      gem install xcpretty -N --no-ri --no-rdoc
 
 
 script:
 # - set -o pipefail && xcodebuild test -verbose -workspace Example/Alert.xcworkspace -scheme Alert-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
-- xcodebuild test -workspace Example/Alert.xcworkspace -scheme Alert-Example -destination 'platform=iOS Simulator,name=iPhone 6 Plus' | xcpretty -c && exit ${PIPESTATUS[0]}
+- xcodebuild test -workspace Example/Alert.xcworkspace -scheme Alert-Example | xcpretty
 - xcodebuild -version
 - xcodebuild -showsdks
 
