--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ podfile: Example/Podfile
 before_install:
 # - gem install cocoapods # Since Travis is not always on latest version
 # - pod install --project-directory=Example
-
+- pod repo update
 
 script:
 # - set -o pipefail && xcodebuild test -verbose -workspace Example/Alert.xcworkspace -scheme Alert-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
