--- a/Example/.travis.yml
+++ b/Example/.travis.yml
@@ -18,7 +18,8 @@ before_install:
 
 
 script:
-# - set -o pipefail && xcodebuild test -verbose -workspace Example/Alert.xcworkspace -scheme Alert-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
+- set -o pipefail && xcodebuild test -verbose -workspace Example/Alert.xcworkspace -scheme Alert-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
+- xcodebuild clean -workspace Example/Alert.xcworkspace -scheme Alert-Example
 - xcodebuild test -workspace Example/Alert.xcworkspace -scheme Alert-Example -destination 'platform=iOS Simulator,name=iPhone 6 Plus' | xcpretty -c && exit ${PIPESTATUS[0]}
 - xcodebuild -version
 - xcodebuild -showsdks
