--- a/.travis.yml
+++ b/.travis.yml
@@ -2,23 +2,24 @@
 # * http://www.objc.io/issue-6/travis-ci.html
 # * https://github.com/supermarin/xcpretty#usage
 
-osx_image: xcode8
+#osx_image: xcode8
 language: objective-c
 
 env: 
   matrix:
     - TEST_TYPE=iOS
 # cache: cocoapods
-# podfile: Example/Podfile
+podfile: Example/Podfile
 before_install:
 # - gem install cocoapods # Since Travis is not always on latest version
-# - pod install --project-directory=Example
+- pod install --project-directory=Example
   - |
       gem install xcpretty -N --no-ri --no-rdoc
 
 
 script:
 # - set -o pipefail && xcodebuild test -verbose -workspace Example/Alert.xcworkspace -scheme Alert-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
+- xcodebuild clean -workspace Example/Alert.xcworkspace -scheme Alert-Example
 - xcodebuild test -workspace Example/Alert.xcworkspace -scheme Alert-Example -destination 'platform=iOS Simulator,name=iPhone 6 Plus' | xcpretty -c && exit ${PIPESTATUS[0]}
 - xcodebuild -version
 - xcodebuild -showsdks
