--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ env:
 # cache: cocoapods
 podfile: Example/Podfile
 before_install:
-# - gem install cocoapods # Since Travis is not always on latest version
+- gem install cocoapods # Since Travis is not always on latest version
 - pod install --project-directory=Example
   - |
       gem install xcpretty -N --no-ri --no-rdoc
