--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,14 @@ language: objective-c
 env: 
   matrix:
     - TEST_TYPE=iOS
-# cache: cocoapods
+cache: cocoapods
 podfile: Example/Podfile
 before_install:
 #- gem install cocoapods # Since Travis is not always on latest version
 #- pod install --project-directory=Example
   #- | gem install xcpretty -N --no-ri --no-rdoc
-  - pod repo update
+  #- pod repo update
+  - travis_wait pod repo update --silent
 
 script:
 # - set -o pipefail && xcodebuild test -verbose -workspace Example/Alert.xcworkspace -scheme Alert-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
